Fix experience headers on mobile and minor content update

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,6 +6,20 @@
     margin: 5px 0 0 auto;
 }
 
+@media (max-width: 736px) {
+    .experience-header {
+        flex-direction: column;
+    }
+
+    .experience-title {
+        margin-bottom: 5px;
+    }
+
+    .experience-date {
+        margin: 0 0 20px 0;
+    }
+}
+
 .attr-footer {
     display: flex;
     width: 100%;
